# rootscope-finder

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish-pypi.yml
src/rootscope_finder/: __init__.py  cli.py  core.py  markers.py
tests/: test_core.py
